<resources>
    <string name="app_name">TD1_Formulaire</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="Nom">Nom</string>
    <string name="Prenom">Prenom</string>
    <string name="Age">Age</string>
    <string name="Homme">Homme</string>
    <string name="Femme">Femme</string>
    <string name="Autre">Autre</string>
    <string name="Email">Email</string>
    <string name="Téléphone">Téléphone</string>
    <string name="Newsletter">Newsletter</string>
    <string name="Oui">Oui</string>
    <string name="Non">Non</string>

    <string name="Valider">Valider</string>
</resources>