<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.TD1_Formulaire.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#E30000"
            app:popupTheme="@style/Theme.TD1_Formulaire.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_marginTop="0dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_nom"
                android:layout_marginTop="58dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editNom"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:text="@string/Nom"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_prenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPrenom"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Prenom" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_age"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editAge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/Age" />
            </com.google.android.material.textfield.TextInputLayout>

            <RadioGroup
                android:id="@+id/groupGenre"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioHomme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Homme" />

                <RadioButton
                    android:id="@+id/radioFemme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Femme" />

                <RadioButton
                    android:id="@+id/radioAutre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Autre" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/Email"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                android:id="@+id/editTel"
                <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="phone"
                android:text="@string/Téléphone"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Newsletter" />

            <RadioGroup
                android:id="@+id/groupAffirm"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:id="@+id/radioOui"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Oui" />

                <RadioButton
                    android:id="@+id/radioNon"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Non" />
            </RadioGroup>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Valider"
                app:backgroundTint="#E30000"
                android:onClick="confirmationInput"/>

                //android:onClick="onClick"

        </LinearLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>